{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 20,
  "lineage": "3352455c-f70d-7ce7-84dc-117ba5cddb47",
  "resources": [
    {
      "module": "module.jitunic",
      "mode": "data",
      "type": "azurerm_public_ip",
      "name": "jitupip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/cebec115-76a4-41a3-b52f-1485335c2232/resourceGroups/rgjitu/providers/Microsoft.Network/publicIPAddresses/jitupip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "68.218.101.145",
            "ip_version": "IPv4",
            "location": "australiaeast",
            "name": "jitupip",
            "resource_group_name": "rgjitu",
            "sku": "Standard"
          }
        }
      ]
    },
    {
      "module": "module.jitunic",
      "mode": "data",
      "type": "azurerm_subnet",
      "name": "jitusubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/cebec115-76a4-41a3-b52f-1485335c2232/resourceGroups/rgjitu/providers/Microsoft.Network/virtualNetworks/jituvnet/subnets/jitusubnet",
            "name": "jitusubnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rgjitu",
            "virtual_network_name": "jituvnet"
          }
        }
      ]
    },
    {
      "module": "module.jitunic",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "jitunic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/cebec115-76a4-41a3-b52f-1485335c2232/resourceGroups/rgjitu/providers/Microsoft.Network/networkInterfaces/jitunic",
            "internal_domain_name_suffix": "yclp5fcmojnuzht35svejkuumb.px.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/cebec115-76a4-41a3-b52f-1485335c2232/resourceGroups/rgjitu/providers/Microsoft.Network/publicIPAddresses/jitupip",
                "subnet_id": "/subscriptions/cebec115-76a4-41a3-b52f-1485335c2232/resourceGroups/rgjitu/providers/Microsoft.Network/virtualNetworks/jituvnet/subnets/jitusubnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "australiaeast",
            "name": "jitunic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "rgjitu"
          },
          "dependencies": [
            "module.jitunic.data.azurerm_public_ip.jitupip",
            "module.jitunic.data.azurerm_subnet.jitusubnet",
            "module.jitupip.azurerm_public_ip.jitupip",
            "module.resource_group.azurerm_resource_group.rgjitu",
            "module.subnet.azurerm_subnet.jitusubnet",
            "module.vnet.azurerm_virtual_network.jituvnet"
          ]
        }
      ]
    },
    {
      "module": "module.jitunsg",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "jitunsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/cebec115-76a4-41a3-b52f-1485335c2232/resourceGroups/rgjitu/providers/Microsoft.Network/networkSecurityGroups/jitunsg",
            "location": "australiaeast",
            "name": "jitunsg",
            "resource_group_name": "rgjitu",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-SSH",
                "priority": 1000,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-HTTP",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resource_group.azurerm_resource_group.rgjitu"
          ]
        }
      ]
    },
    {
      "module": "module.jitupip",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "jitupip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/cebec115-76a4-41a3-b52f-1485335c2232/resourceGroups/rgjitu/providers/Microsoft.Network/publicIPAddresses/jitupip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "68.218.101.145",
            "ip_version": "IPv4",
            "location": "australiaeast",
            "name": "jitupip",
            "resource_group_name": "rgjitu",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.rgjitu",
            "module.subnet.azurerm_subnet.jitusubnet",
            "module.vnet.azurerm_virtual_network.jituvnet"
          ]
        }
      ]
    },
    {
      "module": "module.jituvm",
      "mode": "data",
      "type": "azurerm_network_interface",
      "name": "jitunic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/cebec115-76a4-41a3-b52f-1485335c2232/resourceGroups/rgjitu/providers/Microsoft.Network/networkInterfaces/jitunic",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/cebec115-76a4-41a3-b52f-1485335c2232/resourceGroups/rgjitu/providers/Microsoft.Network/publicIPAddresses/jitupip",
                "subnet_id": "/subscriptions/cebec115-76a4-41a3-b52f-1485335c2232/resourceGroups/rgjitu/providers/Microsoft.Network/virtualNetworks/jituvnet/subnets/jitusubnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "australiaeast",
            "name": "jitunic",
            "network_security_group_id": "/subscriptions/cebec115-76a4-41a3-b52f-1485335c2232/resourceGroups/rgjitu/providers/Microsoft.Network/networkSecurityGroups/jitunsg",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "rgjitu"
          }
        }
      ]
    },
    {
      "module": "module.jituvm",
      "mode": "data",
      "type": "azurerm_network_security_group",
      "name": "jitunsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/cebec115-76a4-41a3-b52f-1485335c2232/resourceGroups/rgjitu/providers/Microsoft.Network/networkSecurityGroups/jitunsg",
            "location": "australiaeast",
            "name": "jitunsg",
            "resource_group_name": "rgjitu",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-SSH",
                "priority": 1000,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-HTTP",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.jituvm",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "jituns_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/cebec115-76a4-41a3-b52f-1485335c2232/resourceGroups/rgjitu/providers/Microsoft.Network/networkInterfaces/jitunic|/subscriptions/cebec115-76a4-41a3-b52f-1485335c2232/resourceGroups/rgjitu/providers/Microsoft.Network/networkSecurityGroups/jitunsg",
            "network_interface_id": "/subscriptions/cebec115-76a4-41a3-b52f-1485335c2232/resourceGroups/rgjitu/providers/Microsoft.Network/networkInterfaces/jitunic",
            "network_security_group_id": "/subscriptions/cebec115-76a4-41a3-b52f-1485335c2232/resourceGroups/rgjitu/providers/Microsoft.Network/networkSecurityGroups/jitunsg"
          },
          "dependencies": [
            "module.jitunic.azurerm_network_interface.jitunic",
            "module.jitunic.data.azurerm_public_ip.jitupip",
            "module.jitunic.data.azurerm_subnet.jitusubnet",
            "module.jitupip.azurerm_public_ip.jitupip",
            "module.jituvm.data.azurerm_network_interface.jitunic",
            "module.jituvm.data.azurerm_network_security_group.jitunsg",
            "module.resource_group.azurerm_resource_group.rgjitu",
            "module.subnet.azurerm_subnet.jitusubnet",
            "module.vnet.azurerm_virtual_network.jituvnet"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "jitusubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/cebec115-76a4-41a3-b52f-1485335c2232/resourceGroups/rgjitu/providers/Microsoft.Network/virtualNetworks/jituvnet/subnets/jitusubnet",
            "name": "jitusubnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rgjitu",
            "virtual_network_name": "jituvnet"
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.rgjitu",
            "module.vnet.azurerm_virtual_network.jituvnet"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "jituvnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "94ff96c0-724c-4c5b-9e7d-fcaa44aa9461",
            "id": "/subscriptions/cebec115-76a4-41a3-b52f-1485335c2232/resourceGroups/rgjitu/providers/Microsoft.Network/virtualNetworks/jituvnet",
            "location": "australiaeast",
            "name": "jituvnet",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "rgjitu",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/cebec115-76a4-41a3-b52f-1485335c2232/resourceGroups/rgjitu/providers/Microsoft.Network/virtualNetworks/jituvnet/subnets/jitusubnet",
                "name": "jitusubnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ]
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.rgjitu"
          ]
        }
      ]
    }
  ]
}